--- a/package.json
+++ b/package.json
@@ -38,14 +38,14 @@
     "babel-loader": "~7.1.4",
     "babel-plugin-add-module-exports": "~0.2.1",
     "babel-plugin-transform-object-rest-spread": "~6.26.0",
-    "babel-polyfill": "^6.26.0",
+    "babel-polyfill": "~6.26.0",
     "babel-preset-env": "~1.7.0",
     "chai": "~4.1.2",
     "cross-env": "~5.2.0",
     "eslint": "~5.1.0",
     "eslint-loader": "~2.1.0",
-    "jsdom": "^11.11.0",
-    "jsdom-global": "^3.0.2",
+    "jsdom": "~11.11.0",
+    "jsdom-global": "~3.0.2",
     "mocha": "~5.2.0",
     "npm-run-all": "~4.1.2",
     "nyc": "~12.0.2",
