--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,10 @@
 language: node_js
 node_js:
-  - 8.11.1
+  - '12'
 branches:
   only:
     - master
-before_install:
-  - npm i -g codecov
 install:
   - npm install
 script:
-  - npm run coverage
-  - codecov
+  - npm run clean && npm run lint && npm run build && npm run coveralls
