--- a/package.json
+++ b/package.json
@@ -50,5 +50,6 @@
     "rollup-plugin-commonjs": "~10.1.0",
     "rollup-plugin-node-resolve": "~5.2.0",
     "rollup-plugin-terser": "~7.0.2"
-  }
+  },
+  "browserslist": "> 0.5%, last 2 versions, Firefox ESR, not dead"
 }
