--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@georapbox/timer",
   "version": "1.2.0",
-  "description": "Minimal javascript library to create and manage timers",
+  "description": "Minimal javascript library to create and manage timers in the browser",
   "main": "dist/Timer.umd.min.js",
   "module": "dist/Timer.esm.min.js",
   "files": [
