--- a/package.json
+++ b/package.json
@@ -45,10 +45,8 @@
     "jest": "~26.6.3",
     "npm-run-all": "~4.1.5",
     "rimraf": "~3.0.2",
-    "rollup": "~2.37.1",
-    "rollup-plugin-babel": "~4.4.0",
-    "rollup-plugin-commonjs": "~10.1.0",
-    "rollup-plugin-node-resolve": "~5.2.0",
+    "rollup": "~2.38.0",
+    "@rollup/plugin-babel": "~5.2.2",
     "rollup-plugin-terser": "~7.0.2"
   },
   "browserslist": "> 0.5%, last 2 versions, Firefox ESR, not dead"
