--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@georapbox/timer",
-  "version": "1.2.0",
+  "version": "2.0.0",
   "description": "Minimal javascript library to create and manage timers in the browser",
   "main": "dist/Timer.umd.min.js",
   "module": "dist/Timer.esm.min.js",
+  "unpkg": "dist/Timer.umd.min.js",
   "files": [
     "src/",
     "dist/"
