--- a/package.json
+++ b/package.json
@@ -36,18 +36,19 @@
   },
   "homepage": "https://github.com/georapbox/Timer#readme",
   "devDependencies": {
-    "@babel/core": "~7.12.3",
-    "@babel/plugin-proposal-object-rest-spread": "~7.12.1",
-    "@babel/preset-env": "~7.12.1",
-    "@babel/register": "~7.12.1",
-    "coveralls": "~3.1.0",
+    "@babel/core": "~7.17.10",
+    "@babel/plugin-proposal-object-rest-spread": "~7.17.3",
+    "@babel/preset-env": "~7.17.10",
+    "@babel/register": "~7.17.7",
+    "@rollup/plugin-babel": "~5.3.1",
+    "coveralls": "~3.1.1",
     "cross-env": "~7.0.2",
-    "eslint": "~7.18.0",
-    "jest": "~26.6.3",
+    "eslint": "~8.14.0",
+    "jest": "~28.0.3",
+    "jest-environment-jsdom": "~28.0.2",
     "npm-run-all": "~4.1.5",
     "rimraf": "~3.0.2",
-    "rollup": "~2.38.0",
-    "@rollup/plugin-babel": "~5.2.2",
+    "rollup": "~2.71.1",
     "rollup-plugin-terser": "~7.0.2"
   },
   "browserslist": "> 0.5%, last 2 versions, Firefox ESR, not dead"
